<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="Home" />

        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/MyAccount" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/History" />
        <item
            android:id="@+id/nav_savings"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/Savings" />
        <item
            android:id="@+id/nav_stats"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/Stats" />
    </group>

</menu>
