<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardElevation="5dp"
    tools:context="com.berstek.uhacpayso.fragments.SelectDayFragment">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:text="@string/Monday"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:id="@+id/txt_select_monday" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="80dp"

                android:layout_margin="2dp"
                android:layout_marginLeft="1dp"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:text="@string/Tuesday"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:id="@+id/txt_select_tuesday" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:text="@string/Wednesday"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:id="@+id/txt_select_wednesday" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:text="@string/Thursday"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:id="@+id/txt_select_thursday" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:text="@string/Friday"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:id="@+id/txt_select_friday" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:text="@string/Saturday"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:id="@+id/txt_select_saturday" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:text="@string/Sunday"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:id="@+id/txt_select_sunday" />

        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>
