<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context="com.berstek.uhacpayso.fragments.CycleSelectionFragment">

    <!-- TODO: Update blank fragment layout -->

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:background="@color/colorPrimary"
        app:cardBackgroundColor="?attr/colorPrimary"
        app:cardElevation="5dp"
        android:id="@+id/card_change_currency">

        <TextView
            android:id="@+id/txt_current_currency"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="P Tap to Change"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:cardElevation="5dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_marginTop="5dp"
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:text="@string/SelectCycleStart"
                android:textSize="18sp" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/textView7"
                android:checkedButton="@+id/radio_month"
                android:orientation="horizontal"
                android:padding="10dp">

                <RadioButton
                    android:id="@+id/radio_month"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Monthly" />

                <RadioButton
                    android:id="@+id/radio_week"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Weekly" />

                <RadioButton
                    android:id="@+id/radio_custom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Custom" />
            </RadioGroup>

        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <fragment
        android:id="@+id/fragment_setup_month"
        android:name="com.berstek.uhacpayso.fragments.SelectDateFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout="@layout/fragment_select_date">

    </fragment>
</LinearLayout>
